TH-79668 projects equipment list alignment fix

--- a/client/src/sass/views/equipment-list.scss
+++ b/client/src/sass/views/equipment-list.scss
@@ -13,6 +13,10 @@
       max-width: 100%;
     }
   }
+
+  thead {
+    overflow-wrap: break-word;
+  }
 }
 
 #equipment-detail {
